--- a/Docker-files/app/Dockerfile
+++ b/Docker-files/app/Dockerfile
@@ -1,12 +1,12 @@
-FROM maven:3.9.9-eclipse-temurin-21-jammy AS MAVEN_IMAGE
+FROM maven:3.9.9-eclipse-temurin-21-jammy AS maven_images
 RUN git clone https://github.com/siddhesh-its/vprofile-project.git
 RUN cd vprofile-project && git checkout containers && mvn install
 
-FROM tomcat:10-jdk21 AS SERVICE_IMAGE
+FROM tomcat:10-jdk21
 LABEL "AUTHOR"="SIDDHESH"
 LABEL "PROJECT"="VPROFILE_app"
-RUN rm -rf /urs/local/tomcat/webapps/*
-COPY --from=MAVEN_IMAGE vprofile-project/target/vprofile-v2.war /urs/local/tomcat/webapps/ROOT.war
+RUN rm -rf /usr/local/tomcat/webapps/*
+COPY --from=maven_images vprofile-project/target/vprofile-v2.war /usr/local/tomcat/webapps/ROOT.war
 
 EXPOSE 8080
-CMD [ "catalina.sh", "run" ]
+CMD ["catalina.sh", "run"]
